practica_04/ejercicio_03/drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: drupal.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-nodeport
            port:
              name: http
  selector:
    app: drupal
